Complete the circle and check import

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 before_script:
   - psql -c "CREATE DATABASE systersdb;" -U postgres
 script:
-  - coverage run --source=systers_portal manage.py test --settings=systers_portal.settings.testing
+  - coverage run systers_portal/manage.py test --settings=systers_portal.settings.testing
   - flake8 systers_portal
 notifications:
   irc:
